--- a/src/main.scss
+++ b/src/main.scss
@@ -78,6 +78,23 @@ label {
         color: #FFFFFF;
     }
 }
+.alert-container {
+    position: fixed;
+    bottom: 1rem;
+    left: 0;
+    width: 100vw;
+    z-index: 5;
+    text-align: center;
+    .alert {
+        background: #FF6683;
+        border-radius: 50px;
+        padding: 1rem;
+        margin: 0 0.25rem;
+        font-family: Inter;
+        font-weight: 500;
+        color: #FFFFFF;
+    }
+}
 .inline-link {
     border-bottom: 1px solid;
 }
